S10P12A407-78 fix: gender uppercase 삭제, toList()변경, MatchSearchRequest에 메서드 삭제